# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
#

2004-04-29 19:51:56 GMT	John Goerzen <jgoerzen@complete.org>	patch-16

    Summary:
      Another checkpoint
    Revision:
      missinglib--head--0.0--patch-16


    modified files:
     ChangeLog libsrc/indexed/indexed.ml


2004-04-29 19:42:26 GMT	John Goerzen <jgoerzen@complete.org>	patch-15

    Summary:
      Checkpointing
    Revision:
      missinglib--head--0.0--patch-15


    modified files:
     ChangeLog libsrc/indexed/indexed.ml


2004-04-29 18:25:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-14

    Summary:
      Experimenting
    Revision:
      missinglib--head--0.0--patch-14


    modified files:
     ChangeLog libsrc/indexed/indexed.ml


2004-04-29 16:40:13 GMT	John Goerzen <jgoerzen@complete.org>	patch-13

    Summary:
      Initial work on indexed complete
    Revision:
      missinglib--head--0.0--patch-13


    new files:
     libsrc/file/.arch-ids/=id libsrc/indexed/.arch-ids/=id
     libsrc/indexed/indexed.ml

    modified files:
     ChangeLog libsrc/Makefile

    new directories:
     libsrc/file libsrc/file/.arch-ids libsrc/indexed
     libsrc/indexed/.arch-ids


2004-04-28 21:33:18 GMT	John Goerzen <jgoerzen@complete.org>	patch-12

    Summary:
      Working on configParser class
    Revision:
      missinglib--head--0.0--patch-12


    modified files:
     ChangeLog libsrc/configParser/configParser.mli


2004-04-28 18:52:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-11

    Summary:
      Experimental new version of the configParser
    Revision:
      missinglib--head--0.0--patch-11


    modified files:
     ChangeLog libsrc/configParser/configParser.ml
     libsrc/configParser/configParser.mli


2004-04-28 15:43:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-10

    Summary:
      Added tests for default options
    Revision:
      missinglib--head--0.0--patch-10

