@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
 #
 
+2004-04-29 19:58:02 GMT	John Goerzen <jgoerzen@complete.org>	patch-17
+
+    Summary:
+      Now appear to work
+    Revision:
+      missinglib--head--0.0--patch-17
+
+
+    modified files:
+     ChangeLog libsrc/indexed/indexed.ml
+
+
 2004-04-29 19:51:56 GMT	John Goerzen <jgoerzen@complete.org>	patch-16
 
     Summary:
